set body bg to black to prevent preload flicker

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -13,7 +13,7 @@
 }
 
 body {
-  background-color: #eee;
+  background-color: #000;
 }
 
 .q-page {
